[package]
name = "async-graphql-relay-derive"
description = "Derive macros for async-graphql-relay crate. Don't use directly!"
version = "0.1.0"
authors = ["Hugo Saracino <hugo.saracino@gmail.com>"]
edition = "2021"
license = "MIT"

homepage = "https://github.com/oscartbeaumont/async-graphql-relay"
documentation = "https://docs.rs/async-graphql-relay"
repository = "https://github.com/oscartbeaumont/async-graphql-relay"

[lib]
proc-macro = true

[dependencies]
syn = "1.0.82"
quote = "1.0.10"
darling = "0.13.1"
